# sparse

./: .gitignore  .travis.yml  CHANGELOG.markdown  README.markdown  Sparse-Fusion.html  Sparse-Key.html  Sparse-Matrix-Fusion.html  Sparse-Matrix-Internal-Array.html  Sparse-Matrix-Internal-Fusion.html  Sparse-Matrix-Internal-Heap.html  Sparse-Matrix-Internal-Key.html  Sparse-Matrix-Internal-Vectored.html  Sparse-Matrix-Key.html  Sparse-Matrix.html  doc-index.html  index-frames.html  index.html  mini_Sparse-Fusion.html  mini_Sparse-Key.html  mini_Sparse-Matrix-Fusion.html  mini_Sparse-Matrix-Internal-Array.html  mini_Sparse-Matrix-Internal-Fusion.html  mini_Sparse-Matrix-Internal-Heap.html  mini_Sparse-Matrix-Internal-Key.html  mini_Sparse-Matrix-Internal-Vectored.html  mini_Sparse-Matrix-Key.html  mini_Sparse-Matrix.html  sparse.cabal  sparse.haddock
benchmarks/: AppleBlas.hs  mm.hs
cbits/: cblas.c
src/: Sparse-Fusion.html  Sparse-Key.html  Sparse-Matrix-Fusion.html  Sparse-Matrix-Internal-Array.html  Sparse-Matrix-Internal-Fusion.html  Sparse-Matrix-Internal-Heap.html  Sparse-Matrix-Internal-Key.html  Sparse-Matrix-Internal-Vectored.html  Sparse-Matrix-Key.html  Sparse-Matrix.html
src/Sparse/: Fusion.hs  Key.hs  Matrix.hs
src/Sparse/Matrix/: Fusion.hs  Heap.hs  Key.hs
src/Sparse/Matrix/Internal/: Array.hs  Fusion.hs  Heap.hs  Key.hs  Vectored.hs
tests/: Instances.hs  doctests.hsc  properties.hs
tests/Sparse/Matrix/: Properties.hs
