name:          sparse
category:      Data, Vector
version:       0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/sparse
bug-reports:   http://github.com/ekmett/sparse/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Simple
synopsis:      A playground of sparse linear algebra primitives using Morton ordering
extra-source-files:
  .ghci
  .travis.yml
  .gitignore
  .vim.custom
description: A playground of sparse linear algebra primitives using Morton ordering

source-repository head
  type: git
  location: git://github.com/ekmett/sparse.git

-- Build the properties test if we're building tests
flag test-properties
  default: True
  manual: True

flag optimize
  default: False
  manual: True

library
  build-depends:
    base              >= 4     && < 5,
    bits              >= 0.3.2 && < 1,
    contravariant     >= 0.4.2 && < 1,
    deepseq           >= 1.1   && < 1.4,
    lens              >= 3.9   && < 4,
    primitive         >= 0.5   && < 0.6,
    vector            >= 0.10  && < 0.11,
    vector-algorithms >= 0.5   && < 0.6,
    hybrid-vectors    >= 0.1   && < 1

  hs-source-dirs: src

  exposed-modules:
    Sparse.Matrix
    Sparse.Matrix.Fusion
    Sparse.Matrix.Key

  ghc-options: -Wall
  if flag(optimize)
    ghc-options: -O2
  else
    ghc-options: -O0

  if impl(ghc<6.13)
    Ghc-Options: -finline-if-enough-args -fno-method-sharing

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  hs-source-dirs: tests
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N -fsimpl-tick-factor=400
  if !flag(test-properties)
    buildable: False
  else
    build-depends:
      base,
      containers,
      hybrid-vectors,
      lens,
      linear                     >= 1.2 && < 2,
      QuickCheck                 >= 2.5,
      sparse,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.3,
      test-framework-th          >= 0.2,
      transformers,
      vector
